--- a/docs/_static/custom.css
+++ b/docs/_static/custom.css
@@ -13,6 +13,7 @@ body {
     }
 }
 
+/* consistent top heading for small screens */
 @media screen and (max-width: 875px) {
     h1.logo {
         display: block;
@@ -40,10 +41,12 @@ h3 a {
     text-decoration: none;
 }
 
+/* alabaster theme sets a min-width on .body which breaks layout on _a lot_ of small screens; there is no reason for this */
 div.body {
     min-width: auto !important;
 }
 
+/* list-style-position: inside; better except for https://github.com/sphinx-doc/sphinx/issues/2258 */
 ul { margin-left: 1em; }
 
 div.body h1 {
